--- a/Web/package.json
+++ b/Web/package.json
@@ -9,9 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.5.12"
+    "axios": "^1.7.7",
+    "pinia": "^2.2.4",
+    "vue": "^3.5.12",
+    "vue-axios": "^3.5.2",
+    "vue-router": "^4.4.5"
   },
   "devDependencies": {
+    "@types/node": "^22.7.9",
     "@vitejs/plugin-vue": "^5.1.4",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
