--- a/Sever/package.json
+++ b/Sever/package.json
@@ -4,20 +4,32 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node-dev --respawn --transpile-only src/app.ts"
+    "dev": "nodemon --exec \"npx ts-node\" app.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^5.21.1",
     "cors": "^2.8.5",
     "express": "^4.21.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.13.0",
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.7.9",
+    "@typescript-eslint/eslint-plugin": "^8.11.0",
+    "@typescript-eslint/parser": "^8.11.0",
+    "eslint": "^9.13.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "globals": "^15.11.0",
+    "nodemon": "^3.1.7",
+    "prettier": "3.3.3",
+    "prisma": "^5.21.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.3",
-    "@types/express": "^5.0.0",
-    "@types/node": "^22.7.9"
+    "typescript-eslint": "^8.11.0"
   }
 }
