--- a/Sever/package.json
+++ b/Sever/package.json
@@ -13,12 +13,16 @@
   "dependencies": {
     "@prisma/client": "^5.21.1",
     "cors": "^2.8.5",
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "express-jwt": "^8.4.1",
+    "node-schedule": "^2.1.1",
+    "rss-parser": "^3.13.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
     "@types/express": "^5.0.0",
     "@types/node": "^22.7.9",
+    "@types/node-schedule": "^2.1.7",
     "@typescript-eslint/eslint-plugin": "^8.11.0",
     "@typescript-eslint/parser": "^8.11.0",
     "eslint": "^9.13.0",
